--- a/src/style.css
+++ b/src/style.css
@@ -20,17 +20,147 @@ body{
 /*css navbar*/
 
 #navbar {
+  width: 100%;
   background-color: black;
   display: flex;
-  padding: 1rem;
   justify-content: space-around;
   color: lightblue;
 }
 
-#navbar > p :hover {
+.item-content{
+  width: 17%;
+  border-right: 2px solid gray;
+  transform: skewX(34deg);
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  text-align: center;
+}
+
+.item-navbar{
+  padding: 0.5rem;
+  margin: 0;
+  transform: skewX(-37deg);
+  font-size: small;
+}
+
+.item-navbar:hover {
   color: #ffffff;
   background-color: #3ca976;
-  padding: 0.5rem;
   border-radius: 2rem;
   box-shadow: -5px -4px 12px 0px;
+  pointer-events: all;
+  cursor: pointer;
+}
+
+/*css section1*/
+
+#intro{
+  background-image: url('./img/foto\ per\ sfondo\ titolo\ principale\ home.jpeg');
+  background-size: cover;
+  background-position-y: -13rem;
+  display: flex;
+  padding: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  height: 19rem;
+}
+
+#introduzione{
+  width: 60%;
+  text-align: center;
+  background-color: #ffffff87;
+  padding: 1rem;
+  border-radius: 2rem;
+}
+
+#articole1{
+  margin: 2rem;
+  text-align: center;
+  background-color: #7fcbfbe0;
+  border-radius: 2rem;
+}
+
+.avantiDiv {
+    animation: slideInRight 0.6s ease forwards;
+}
+
+@keyframes slideInRight {
+    from {
+        transform: translateX(100%); /* arriva da destra */
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.indietroDiv {
+    animation: slideOutLeft 0.6s ease forwards;
+}
+
+@keyframes slideOutLeft {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0); /* esce a sinistra */
+        opacity: 1;
+    }
+}
+
+.activeCard {
+  color: #000000;
+  padding: 20px;
+  border-radius: 8px;
+  transition: 0.3s;
+  background: linear-gradient(33deg, rgb(95 255 71) 17%, rgba(32, 227, 204, 1) 44%, rgb(229 65 65) 73%);
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.allArrow{
+  padding: 1rem;
+  border-radius: 2rem;
+  border: none;
+  background-color: black;
+}
+
+.allArrow:hover{
+  box-shadow: 0px 0px 14px 1px;
+  color: black;
+  background-color: #E91E63;
+}
+
+#articole4{
+  text-align: center;
+  margin-top: 5rem;
+  margin-bottom: 4rem;
+}
+
+#articole4 h5{
+  margin: 0;
+  padding: 1rem;
+  background-color: #939393;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 2rem;
+  margin-bottom: 3rem;
+  border: 2px #bbbbbb solid;
+  font-size: larger;
+}
+
+#group-loghi{
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.loghi-link-collaborazioni{
+  width: 100%;
+  height: 15rem;
 }
