--- a/src/style.css
+++ b/src/style.css
@@ -22,93 +22,161 @@ body{
 #navbar {
   width: 100%;
   background-color: black;
+}
+
+#navbarPhone{
+  align-items: center;
   display: flex;
-  justify-content: space-around;
   color: lightblue;
+  justify-content: space-between;
+  padding: 1rem;
 }
 
-.item-content{
-  width: 17%;
-  border-right: 2px solid gray;
-  transform: skewX(34deg);
-  padding-right: 1rem;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  text-align: center;
-}
-
-.item-navbar{
-  padding: 0.5rem;
+#navbarMenu{
   margin: 0;
-  transform: skewX(-37deg);
-  font-size: small;
+  background-color: white;
+  padding: 0.5rem;
+  color: black;
+  border-radius: 1rem;
 }
 
-.item-navbar:hover {
-  color: #ffffff;
-  background-color: #3ca976;
-  border-radius: 2rem;
-  box-shadow: -5px -4px 12px 0px;
-  pointer-events: all;
-  cursor: pointer;
+#navbarlogo{
+  height: 2rem;
+}
+
+#navbarLaptop{
+  display: none;
+}
+
+.showmenuOf{
+  display: none;
+}
+
+.showMenuOn{
+  position: absolute;
+  background-color: #000000;
+  width: 100%;
+  height: 100%;
+}
+
+#itemNavbarClose{
+  margin: 0;
+  color: white;
+  padding: 0.5rem;
+}
+
+.itemP{
+  text-shadow: 2px -1px 3px #ffffff;
+  padding: 0.5rem;
+  color: white;
+  margin: 0;
+}
+
+.itemHr{
+  margin: 0;
+  color: #7eff60;
+}
+
+/*css navbar per laptop in su*/
+
+@media (min-width: 769px) {
+ 
+  #navbarPhone{
+    display: none;
+  }
+
+  #navbarLaptop{
+    display: flex;
+    justify-content: space-around;
+    color: lightblue;
+  }
+
+  .item-content{
+    width: 17%;
+    border-right: 2px solid gray;
+    transform: skewX(34deg);
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+    text-align: center;
+  }
+
+  .item-navbar{
+    padding: 0.5rem;
+    margin: 0;
+    transform: skewX(-37deg);
+    font-size: small;
+  }
+
+  .item-navbar:hover {
+    color: #ffffff;
+    background-color: #3ca976;
+    border-radius: 2rem;
+    box-shadow: -5px -4px 12px 0px;
+    pointer-events: all;
+    cursor: pointer;
+  }
 }
 
 /*css section1*/
 
 #intro{
   background-image: url('./img/foto\ per\ sfondo\ titolo\ principale\ home.jpeg');
-  background-size: cover;
-  background-position-y: -13rem;
-  display: flex;
+  background-size: 20rem 15rem;
+  background-position-x: 0rem;
+  background-position-y: 0rem;
   padding: 1rem;
   justify-content: space-between;
   align-items: center;
-  height: 19rem;
+  height: 15rem;
 }
 
 #introduzione{
-  width: 60%;
   text-align: center;
   background-color: #ffffff87;
   padding: 1rem;
   border-radius: 2rem;
 }
 
+#introduzione h1{
+  margin: 0;
+  padding: 0.5rem;
+  font-size: larger;
+  font-weight: 900;
+}
+
+#introduzione h3{
+  margin: 0;
+  padding-bottom: 1rem;
+  font-size: small;
+  font-weight: bolder;
+}
+
+#introduzione p{
+  margin: 0;
+  font-size: small;
+}
+
 #articole1{
-  margin: 2rem;
-  text-align: center;
-  background-color: #7fcbfbe0;
-  border-radius: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  margin-right: 2rem;
+  background-color: #ffffff66;
+  border-radius: 0rem 5rem 6rem 0rem;
+}
+
+#articole1 p{
+  font-size: small;
+  padding: 1rem;
+  margin: 0;
 }
 
 .avantiDiv {
     animation: slideInRight 0.6s ease forwards;
 }
 
-@keyframes slideInRight {
-    from {
-        transform: translateX(100%); /* arriva da destra */
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
 .indietroDiv {
     animation: slideOutLeft 0.6s ease forwards;
-}
-
-@keyframes slideOutLeft {
-    from {
-        transform: translateX(-100%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0); /* esce a sinistra */
-        opacity: 1;
-    }
 }
 
 .activeCard {
@@ -117,7 +185,7 @@ body{
   border-radius: 8px;
   transition: 0.3s;
   background: linear-gradient(33deg, rgb(95 255 71) 17%, rgba(32, 227, 204, 1) 44%, rgb(229 65 65) 73%);
-  width: 70%;
+  width: 95%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -127,12 +195,14 @@ body{
   border-radius: 2rem;
   border: none;
   background-color: black;
+  font-size: x-small;
 }
 
 .allArrow:hover{
   box-shadow: 0px 0px 14px 1px;
   color: black;
   background-color: #E91E63;
+  font-size: x-small;
 }
 
 #articole4{
@@ -158,9 +228,45 @@ body{
   display: flex;
   width: 100%;
   justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+#group-loghi a{
+  width: 25%;
+  margin: 1rem;
 }
 
 .loghi-link-collaborazioni{
   width: 100%;
-  height: 15rem;
+  height: 5rem;
+}
+
+/*animazioni section1*/
+
+@keyframes slideInRight {
+    from {
+        transform: translateX(100%); /* arriva da destra */
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideOutLeft {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0); /* esce a sinistra */
+        opacity: 1;
+    }
+}
+
+/*css footer*/
+
+#footer{
+
 }
