--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ body{
   margin: 0;
 }
 
-/*css navbar*/
+/*css GlobalNavbarScs*/
 
 #navbar {
   width: 100%;
@@ -77,7 +77,7 @@ body{
   color: #7eff60;
 }
 
-/*css navbar per laptop in su*/
+/*css GlobalNavbarScs per laptop in su*/
 
 @media (min-width: 769px) {
  
@@ -118,13 +118,13 @@ body{
   }
 }
 
-/*css section1*/
+/*css HomeSection1*/
 
 #intro{
   background-image: url('./img/foto\ per\ sfondo\ titolo\ principale\ home.jpeg');
-  background-size: 20rem 15rem;
+  background-size: cover;
   background-position-x: 0rem;
-  background-position-y: 0rem;
+  background-position-y: -4rem;
   padding: 1rem;
   justify-content: space-between;
   align-items: center;
@@ -170,7 +170,7 @@ body{
   background-color: #ffffff70;
   padding: 0.5rem;
   margin: 0.5rem;
-  border-radius: 0px 0px 5rem 5rem;
+  border-radius: 0px 0px 1rem 1rem;
 }
 
 #articole1 p{
@@ -192,12 +192,30 @@ body{
   border-radius: 2rem;
 }
 
-.avantiDiv {
-    animation: slideInRight 0.6s ease forwards;
+#articole2{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
-.indietroDiv {
-    animation: slideOutLeft 0.6s ease forwards;
+#brochureArticole2{
+  background-image: url('./img/immagini\ per\ section1/DSC_3155.JPG');
+  height: 17rem;
+  background-size: cover;
+  padding: 2rem;
+}
+
+#brochureArticole2 p{
+  margin-left: 3rem;
+  margin-right: 3rem;
+  padding: 2rem;
+  background-color: #ffffffa1;
+  border-radius: 2rem;
+}
+
+#brochureArticole2 a{
+  margin: 0.5rem;
+  font-size: x-small;
 }
 
 .activeCard {
@@ -228,8 +246,8 @@ body{
 
 #articole4{
   text-align: center;
-  margin-top: 5rem;
-  margin-bottom: 4rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 #articole4 h5{
@@ -264,26 +282,80 @@ body{
 
 /*animazioni section1*/
 
-@keyframes slideInRight {
-    from {
-        transform: translateX(100%); /* arriva da destra */
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
+/*css ChiSiamoSection1*/
+
+#nascita{
+  background-image: url('./img/immagini\ per\ section1/il Nucleo Istruttori.JPG');
+  background-size: cover;
+  height: 17rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  padding-top: 0.5rem;
 }
 
-@keyframes slideOutLeft {
-    from {
-        transform: translateX(-100%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0); /* esce a sinistra */
-        opacity: 1;
-    }
+#nascita div{
+  background-color: #ffffffad;
+  padding: 1rem;
+  margin-right: 3rem;
+  border-radius: 0rem 1rem 12rem 0rem;
+  color: black;
+  font-size: small;
+}
+
+#mission{
+  background-image: url('./img/immagini\ per\ section1/DSC_0204.JPG');
+  background-size: 28rem 17rem;
+  background-position-x: 0rem;
+  height: 17rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: small;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+#mission div{
+  color: black;
+  background-color: #ffffffab;
+  padding: 0.5rem;
+  margin-left: 2rem;
+  border-radius: 1rem 0rem 0rem 5rem;
+  text-align: right;
+}
+
+#progetto{
+  background-image: url('./img/sfondo\ Chi\ siamo.jpg');
+  background-size: 50rem 40rem;
+  background-position-x: -14rem;
+  font-size: small;
+  height: 40rem;
+  padding: 1rem;
+  text-align: center;
+}
+
+#progetto div{
+  background-color: #ffffffb5;
+  color: black;
+  padding: 0.5rem;
+  border-radius: 3rem;
+}
+
+#video{
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+#groupVideo{
+  display: flex;
+  flex-direction: column;
+}
+
+#groupVideo iframe{
+  width: 100%;
+  height: 12rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 /*css footer*/
@@ -302,4 +374,11 @@ body{
 #footer p{ 
   margin-top: 2rem;
   margin-bottom: 0;
+}
+
+.itemFooter{
+  margin: 1rem;
+  padding: 0.2rem;
+  background-color: white;
+  border-radius: 2rem;
 }
